Actualizar politica-devolucion.html

--- a/politica de devolucion/politica-devolucion.html
+++ b/politica de devolucion/politica-devolucion.html
@@ -14,6 +14,9 @@
     <main>
         <section class="refund-policy">
             <p>
+                politica de devolución 
+                </p>
+            <p>
                 En caso de quemada, ofrecemos un 50% de descuento en la compra de un nuevo dispositivo del mismo modelo. Este descuento será aplicable siempre y cuando el daño sea visible y comprobable. El dispositivo defectuoso debe ser devuelto para su evaluación antes de que se aplique el descuento.
             </p>
             <p>
