--- a/catalogo.html
+++ b/catalogo.html
@@ -129,7 +129,7 @@
         <h1>Catálogo de Productos</h1>
         <!-- Primer Producto -->
         <div class="producto">
-            <h2>Producto 1</h2>
+            <h2>20.000</h2>
             <!-- Imagen centrada con flechas -->
             <div class="flechas">
                 <span class="flecha izquierda" onclick="cambiarImagen('producto1', -1)">&#9664;</span>
@@ -210,7 +210,7 @@
         </div>
         <!-- Tercer Producto -->
         <div class="producto">
-            <h2>Producto 3</h2>
+            <h2>25.000</h2>
             <!-- Imagen centrada con flechas -->
             <div class="flechas">
                 <span class="flecha izquierda" onclick="cambiarImagen('producto3', -1)">&#9664;</span>
@@ -225,9 +225,9 @@
             <div>
                 <label for="sabor3">Sabor:</label>
                 <select id="sabor3" name="sabor3">
-                    <option value="Sabor 1">Sabor 1 <span class="en-stock">(En stock)</span></option>
-                    <option value="Sabor 2">Sabor 2 <span class="en-stock">(En stock)</span></option>
-                    <option value="Sabor 3">Sabor 3 <span class="en-stock">(En stock)</span></option>
+                    <option value="Sabor 1">Mix Fruit  <span class="en-stock">(2)</span></option>
+                    <option value="Sabor 2">Bluberry Mint <span class="en-stock">(1)</span></option>
+                    <option value="Sabor 3">bluberry raspberry <span class="en-stock">(1)</span></option>
                 </select>
             </div>
             <div>
@@ -244,7 +244,7 @@
         </div>
         <!-- Cuarto Producto -->
         <div class="producto">
-            <h2>Producto 4</h2>
+            <h2>30.000</h2>
             <!-- Imagen centrada con flechas -->
             <div class="flechas">
                 <span class="flecha izquierda" onclick="cambiarImagen('producto4', -1)">&#9664;</span>
@@ -259,12 +259,18 @@
             <div>
                 <label for="sabor4">Sabor:</label>
                 <select id="sabor4" name="sabor4">
-                    <option value="Bluberry ice - Black dragon ice">Bluberry ice - Black dragon ice <span class="en-stock">(En stock)</span></option>
-                    <option value="Red bull - Bluberry watermelon">Red bull - Bluberry watermelon <span class="en-stock">(En stock)</span></option>
-                    <option value="Watermelon ice - Bluberry mint">Watermelon ice - Bluberry mint <span class="en-stock">(En stock)</span></option>
-                    <option value="Strawberry kiwi - Sour apple raspberry">Strawberry kiwi - Sour apple raspberry <span class="en-stock">(En stock)</span></option>
-                    <option value="Bluberry rasberry - Peach mango watermelon">Bluberry rasberry - Peach mango watermelon <span class="en-stock">(En stock)</span></option>
-                    <option value="Strawberry kiwi - Peach ice">Strawberry kiwi - Peach ice <span class="en-stock">(En stock)</span></option>
+                    <option value="Bluberry ice - Black dragon ice">strawberry watermelon / kiwi passion fruit guava <span class="en-stock">(En stock)</span></option>
+                    <option value="Red bull - Bluberry watermelon">red bull / bluberry watermelon <span class="en-stock">(En stock)</span></option>
+                    <option value="Watermelon ice - Bluberry mint">bluberry ice / strawberry and banana<span class="en-stock">(En stock)</span></option>
+                    <option value="Strawberry kiwi - Sour apple raspberry">bluberry raspberry /peach mango watermelon <span class="en-stock">(En stock)</span></option>
+                    <option value="Bluberry rasberry - Peach mango watermelon">bluberry rasberry/mixed mouldy fruit <span class="en-stock">(En stock)</span></option>
+                    <option value="Strawberry kiwi - Peach ice">strawberry kiwi/ peach ice<span class="en-stock">(En stock)</span></option>
+                    <option value="Strawberry kiwi - Peach ice">bluberry ice / black dragon ice <span class="en-stock">(En stock)</span></option>
+                    <option value="Strawberry kiwi - Peach ice">red bull / watermelon bubble candy <span class="en-stock">(En stock)</span></option>
+                    <option value="Strawberry kiwi - Peach ice">watermelon ice / bluberry mint <span class="en-stock">(En stock)</span></option>
+                    <option value="Strawberry kiwi - Peach ice">watermelon ice / strawberry and mango <span class="en-stock">(En stock)</span></option>
+                    <option value="Strawberry kiwi - Peach ice">strawberry kiwi / sour apple raspberry <span class="en-stock">(En stock)</span></option>
+                    <option value="Strawberry kiwi - Peach ice">strawberry and watermelon / grape ice <span class="en-stock">(En stock)</span></option>
                 </select>
             </div>
             <div>
