Actualizar catalogo.html

--- a/catalogo.html
+++ b/catalogo.html
@@ -163,9 +163,12 @@
             <p class="rebajado">Antes: 15€</p>
             <label for="sabor4">Sabor:</label>
             <select id="sabor4" name="sabor4">
-                <option value="Red bull">red bull / bluberry watermelon (En stock)</option>
-                <option value="Strawberry Kiwi">watermelon ice / bluberry mint (En stock)</option>
-                <option value="Strawberry Kiwi">strawberry and watermelon / grape ice (En stock)</option>
+                <option value="Red bull">red bull / bluberry watermelon(3)</option>
+                <option value="Strawberry Kiwi">strawberry kiwi/sour apple raspberry (1)</option>
+                <option value="Strawberry Kiwi">bluberry raspberry /peach mango watermelon(3)</option>
+                <option value="Red bull">bluberry raspberry/mixed mouldy fruit(1)</option>
+                <option value="Strawberry Kiwi">strawberry watermelon/kiwi passion fruit guava(1)</option>
+                <option value="Strawberry Kiwi">strawberry kiwi/peach ice (1)</option>
             </select>
         </div>
     </div>
