Actualizar catalogo.html

--- a/catalogo.html
+++ b/catalogo.html
@@ -133,7 +133,8 @@
                 <img class="imagen-producto" id="producto2" src="30.000NEWS.JPG" alt="Imagen de producto 2">
                 <span class="flecha derecha" onclick="cambiarImagen('producto2', 1)">&#9654;</span>
             </div>
-            <p class="precio-normal">Precio: 14,99€</p>
+                <p class="oferta">Oferta Flash: 11,99€</p>
+<p class="rebajado">Antes: 15€</p>
             <label for="sabor2">Sabor:</label>
             <select id="sabor2" name="sabor2">
                 <option value="">strawberry watermelon(En stock)</option>
