Actualizar catalogo.html

--- a/catalogo.html
+++ b/catalogo.html
@@ -119,9 +119,8 @@
             <p class="rebajado">Antes: 15€</p>
             <label for="sabor1">Sabor:</label>
             <select id="sabor1" name="sabor1">
-                <option value="Red bull">Red bull (En stock)</option>
-                <option value="Fresa sandía">Fresa sandía (En stock)</option>
-                <option value="Arándanos sandía">Arándanos sandía (En stock)</option>
+                <option value="Red bull">Menta  (En stock)</option>
+                
             </select>
         </div>
         
