--- a/calorias.html
+++ b/calorias.html
@@ -198,18 +198,21 @@
             <span>▼</span>
         </div>
         <div id="desayuno" class="meal-content">
-            <div class="food-item" data-calories="300" data-protein="15" data-fat="10" data-saturatedFat="3">
-                Tostadas con aguacate
+            <div class="food-item" data-calories="68,8" data-protein="8" data-fat="0,8" data-saturatedFat="0,48">
+                cafe con leche
                 <button onclick="addPredefinedFood(this)">+</button>
             </div>
-            <div class="food-item" data-calories="250" data-protein="20" data-fat="5" data-saturatedFat="2">
-                Yogur con frutas
+            <div class="food-item" data-calories="127,8" data-protein="19,5" data-fat="1,7" data-saturatedFat="1,03">
+             cafe con leche +proteina
                 <button onclick="addPredefinedFood(this)">+</button>
             </div>
-            <div class="food-item" data-calories="150" data-protein="5" data-fat="3" data-saturatedFat="1">
-                Café con leche
+            <div class="food-item" data-calories="27,03" data-protein="3,75" data-fat="0,89" data-saturatedFat="0,21">
+                1 panecillo 
                 <button onclick="addPredefinedFood(this)">+</button>
             </div>
+             <div class="food-item" data-calories="108,12" data-protein="15" data-fat="3,56" data-saturatedFat="1,05">
+                4 panecillo 
+                <button onclick="addPredefinedFood(this)">+</button>
         </div>
     </div>
     
@@ -236,16 +239,12 @@
             <span>▼</span>
         </div>
         <div id="comida" class="meal-content">
-            <div class="food-item" data-calories="500" data-protein="30" data-fat="20" data-saturatedFat="6">
-                Pasta con pollo
+    <div class="food-item" data-calories="68,8" data-protein="8" data-fat="0,8" data-saturatedFat="0,48">
+                cafe con leche
                 <button onclick="addPredefinedFood(this)">+</button>
             </div>
-            <div class="food-item" data-calories="350" data-protein="15" data-fat="12" data-saturatedFat="4">
-                Ensalada mixta
-                <button onclick="addPredefinedFood(this)">+</button>
-            </div>
-            <div class="food-item" data-calories="150" data-protein="2" data-fat="0" data-saturatedFat="0">
-                Pan integral
+            <div class="food-item" data-calories="127,8" data-protein="19,5" data-fat="1,7" data-saturatedFat="1,03">
+             cafe con leche +proteina
                 <button onclick="addPredefinedFood(this)">+</button>
             </div>
         </div>
@@ -274,16 +273,12 @@
             <span>▼</span>
         </div>
         <div id="cena" class="meal-content">
-            <div class="food-item" data-calories="450" data-protein="35" data-fat="15" data-saturatedFat="5">
-                Pescado con verduras
+       <div class="food-item" data-calories="27,03" data-protein="3,75" data-fat="0,89" data-saturatedFat="0,21">
+                1 panecillo 
                 <button onclick="addPredefinedFood(this)">+</button>
             </div>
-            <div class="food-item" data-calories="300" data-protein="20" data-fat="10" data-saturatedFat="3">
-                Tortilla francesa
-                <button onclick="addPredefinedFood(this)">+</button>
-            </div>
-            <div class="food-item" data-calories="100" data-protein="2" data-fat="1" data-saturatedFat="0">
-                Infusión
+             <div class="food-item" data-calories="108,12" data-protein="15" data-fat="3,56" data-saturatedFat="1,05">
+                4 panecillo 
                 <button onclick="addPredefinedFood(this)">+</button>
             </div>
         </div>
