--- a/calorias.html
+++ b/calorias.html
@@ -1650,20 +1650,20 @@
                             </div>
                         </div>
                         <!-- Jamón cocido -->
-                        <div class="food-item" data-calories="145" data-protein="20" data-fat="7" data-saturatedFat="2.5" data-carbs="1" data-default-weight="50">
-                            <span>Jamón cocido</span>
+                        <div class="food-item" data-calories="98" data-protein="19" data-fat="2,5" data-saturatedFat="1" data-carbs="0,5" data-default-weight="15">
+                            <span>Jamón york</span>
                             <div class="food-quantity">
                                 <input type="number" class="quantity-input" value="1" min="1">
                                 <button class="details-btn" onclick="toggleDetails(this)">+</button>
                                 <button onclick="addPredefinedFood(this)">Agregar</button>
                             </div>
                             <div class="food-details">
-                                <p>Kilocalorías: 145 kcal</p>
-                                <p>Proteínas: 20 g</p>
-                                <p>Grasas: 7 g</p>
-                                <p>Grasas saturadas: 2.5 g</p>
-                                <p>Carbohidratos: 1 g</p>
-                                <p>Peso por unidad: 50 g</p>
+                                <p>Kilocalorías: 98 kcal</p>
+                                <p>Proteínas:19 g</p>
+                                <p>Grasas: 2,5 g</p>
+                                <p>Grasas saturadas: 1 g</p>
+                                <p>Carbohidratos: 0,5 g</p>
+                                <p>Peso por unidad: 15g</p>
                                 <input type="number" class="weight-input" value="50" min="1" placeholder="Peso en gramos">
                             </div>
                         </div>
