--- a/calorias.html
+++ b/calorias.html
@@ -1560,7 +1560,7 @@
                             </div>
                         </div>
                         <!-- Pavo -->
-                        <div class="food-item" data-calories="85" data-protein="16,4" data-fat="1,8" data-saturatedFat="0,6" data-carbs="0,8" data-default-weight="106">
+                        <div class="food-item" data-calories="85" data-protein="16.4" data-fat="1.8" data-saturatedFat="0.6" data-carbs="0.8" data-default-weight="106">
                             <span>Pavo</span>
                             <div class="food-quantity">
                                 <input type="number" class="quantity-input" value="1" min="1">
@@ -1569,11 +1569,11 @@
                             </div>
                             <div class="food-details">
                                 <p>Kilocalorías: 85 kcal</p>
-                                <p>Proteínas: 16,4 g</p>
-                                <p>Grasas: 1,8 g</p>
-                                <p>Grasas saturadas: 0,6g</p>
-                                <p>Carbohidratos: 0,8g</p>
-                                <p>Peso por unidad: 106g</p>
+                                <p>Proteínas: 16.4 g</p>
+                                <p>Grasas: 1.8 g</p>
+                                <p>Grasas saturadas: 0.6g</p>
+                                <p>Carbohidratos: 0.8g</p>
+                                <p>Peso por unidad: 106g✅</p>
                                 <input type="number" class="weight-input" value="106" min="1" placeholder="Peso en gramos">
                             </div>
                         </div>
