--- a/calorias.html
+++ b/calorias.html
@@ -1632,7 +1632,7 @@
                             </div>
                         </div>
                         <!-- Jamón serrano -->
-                        <div class="food-item" data-calories="242" data-protein="30" data-fat="13" data-saturatedFat="4.5" data-carbs="0" data-default-weight="50">
+                        <div class="food-item" data-calories="247.80" data-protein="33.55" data-fat="12.20" data-saturatedFat="4.60" data-carbs="1" data-default-weight="100">
                             <span>Jamón serrano</span>
                             <div class="food-quantity">
                                 <input type="number" class="quantity-input" value="1" min="1">
@@ -1640,12 +1640,12 @@
                                 <button onclick="addPredefinedFood(this)">Agregar</button>
                             </div>
                             <div class="food-details">
-                                <p>Kilocalorías: 242 kcal</p>
-                                <p>Proteínas: 30 g</p>
-                                <p>Grasas: 13 g</p>
-                                <p>Grasas saturadas: 4.5 g</p>
-                                <p>Carbohidratos: 0 g</p>
-                                <p>Peso por unidad: 50 g</p>
+                                <p>Kilocalorías: 247.80 kcal</p>
+                                <p>Proteínas: 33.60 g</p>
+                                <p>Grasas: 12.20 g</p>
+                                <p>Grasas saturadas: 4.6 g</p>
+                                <p>Carbohidratos: 1 g</p>
+                                <p>Peso por unidad: 100g✅</p>
                                 <input type="number" class="weight-input" value="50" min="1" placeholder="Peso en gramos">
                             </div>
                         </div>
