--- a/calorias.html
+++ b/calorias.html
@@ -1560,21 +1560,21 @@
                             </div>
                         </div>
                         <!-- Pavo -->
-                        <div class="food-item" data-calories="135" data-protein="30" data-fat="1" data-saturatedFat="0.3" data-carbs="0" data-default-weight="150">
-                            <span>Pavo</span>
+                        <div class="food-item" data-calories="85" data-protein="16.4" data-fat="1.8" data-saturatedFat="0.6" data-carbs="0.8" data-default-weight="120">
+                            <span>Pavo chuletas</span>
                             <div class="food-quantity">
                                 <input type="number" class="quantity-input" value="1" min="1">
                                 <button class="details-btn" onclick="toggleDetails(this)">+</button>
                                 <button onclick="addPredefinedFood(this)">Agregar</button>
                             </div>
                             <div class="food-details">
-                                <p>Kilocalorías: 135 kcal</p>
-                                <p>Proteínas: 30 g</p>
-                                <p>Grasas: 1 g</p>
-                                <p>Grasas saturadas: 0.3 g</p>
-                                <p>Carbohidratos: 0 g</p>
-                                <p>Peso por unidad: 150 g</p>
-                                <input type="number" class="weight-input" value="150" min="1" placeholder="Peso en gramos">
+                                <p>Kilocalorías:  85 kcal</p>
+                                <p>Proteínas: 16.4 g</p>
+                                <p>Grasas: 1.8 g</p>
+                                <p>Grasas saturadas: 0.6 g</p>
+                                <p>Carbohidratos: 0.8 g</p>
+                                <p>Peso por unidad: 120 g✅</p>
+                                <input type="number" class="weight-input" value="120" min="1" placeholder="Peso en gramos">
                             </div>
                         </div>
                         <!-- Pavo molido -->
@@ -1632,7 +1632,7 @@
                             </div>
                         </div>
                         <!-- Jamón serrano -->
-                        <div class="food-item" data-calories="242" data-protein="30" data-fat="13" data-saturatedFat="4.5" data-carbs="0" data-default-weight="50">
+                        <div class="food-item" data-calories="247.80" data-protein="33.50" data-fat="12.20" data-saturatedFat="4.60" data-carbs="1" data-default-weight="100">
                             <span>Jamón serrano</span>
                             <div class="food-quantity">
                                 <input type="number" class="quantity-input" value="1" min="1">
@@ -1640,31 +1640,67 @@
                                 <button onclick="addPredefinedFood(this)">Agregar</button>
                             </div>
                             <div class="food-details">
-                                <p>Kilocalorías: 242 kcal</p>
-                                <p>Proteínas: 30 g</p>
-                                <p>Grasas: 13 g</p>
-                                <p>Grasas saturadas: 4.5 g</p>
-                                <p>Carbohidratos: 0 g</p>
-                                <p>Peso por unidad: 50 g</p>
-                                <input type="number" class="weight-input" value="50" min="1" placeholder="Peso en gramos">
+                                <p>Kilocalorías: 247.80 kcal</p>
+                                <p>Proteínas: 33.50 g</p>
+                                <p>Grasas: 12.20 g</p>
+                                <p>Grasas saturadas: 4.60 g</p>
+                                <p>Carbohidratos: 1 g</p>
+                                <p>Peso por unidad: 100 g✅</p>
+                                <input type="number" class="weight-input" value="100" min="1" placeholder="Peso en gramos">
                             </div>
                         </div>
                         <!-- Jamón cocido -->
-                        <div class="food-item" data-calories="145" data-protein="20" data-fat="7" data-saturatedFat="2.5" data-carbs="1" data-default-weight="50">
-                            <span>Jamón cocido</span>
+                        <div class="food-item" data-calories="98" data-protein="19" data-fat="2.5" data-saturatedFat="1" data-carbs="0.5" data-default-weight="15">
+                            <span>Jamón cocido extra</span>
                             <div class="food-quantity">
                                 <input type="number" class="quantity-input" value="1" min="1">
                                 <button class="details-btn" onclick="toggleDetails(this)">+</button>
                                 <button onclick="addPredefinedFood(this)">Agregar</button>
                             </div>
                             <div class="food-details">
-                                <p>Kilocalorías: 145 kcal</p>
-                                <p>Proteínas: 20 g</p>
-                                <p>Grasas: 7 g</p>
-                                <p>Grasas saturadas: 2.5 g</p>
+                                <p>Kilocalorías: 98 kcal</p>
+                                <p>Proteínas: 19 g</p>
+                                <p>Grasas: 2.5 g</p>
+                                <p>Grasas saturadas: 1 g</p>
+                                <p>Carbohidratos: 0.5 g</p>
+                                <p>Peso por unidad: 15 g✅</p>
+                                <input type="number" class="weight-input" value="15" min="1" placeholder="Peso en gramos">
+                            </div>
+                        </div>
+                         <!-- salchichas -->
+                         <div class="food-item" data-calories="222" data-protein="14" data-fat="18" data-saturatedFat="6" data-carbs="1" data-default-weight="31">
+                            <span>salchichas</span>
+                            <div class="food-quantity">
+                                <input type="number" class="quantity-input" value="1" min="1">
+                                <button class="details-btn" onclick="toggleDetails(this)">+</button>
+                                <button onclick="addPredefinedFood(this)">Agregar</button>
+                            </div>
+                            <div class="food-details">
+                                <p>Kilocalorías: 222 kcal</p>
+                                <p>Proteínas: 14 g</p>
+                                <p>Grasas: 18 g</p>
+                                <p>Grasas saturadas: 6 g</p>
                                 <p>Carbohidratos: 1 g</p>
-                                <p>Peso por unidad: 50 g</p>
-                                <input type="number" class="weight-input" value="50" min="1" placeholder="Peso en gramos">
+                                <p>Peso por unidad: 31 g✅(cada una)</p>
+                                <input type="number" class="weight-input" value="31" min="1" placeholder="Peso en gramos">
+                            </div>
+                        </div>
+                         <!-- nonganiza -->
+                         <div class="food-item" data-calories="245" data-protein="15.90" data-fat="19.40" data-saturatedFat="7.80" data-carbs="1.70" data-default-weight="30">
+                            <span>nonganiza</span>
+                            <div class="food-quantity">
+                                <input type="number" class="quantity-input" value="1" min="1">
+                                <button class="details-btn" onclick="toggleDetails(this)">+</button>
+                                <button onclick="addPredefinedFood(this)">Agregar</button>
+                            </div>
+                            <div class="food-details">
+                                <p>Kilocalorías: 245 kcal</p>
+                                <p>Proteínas: 15.90 g</p>
+                                <p>Grasas: 19.40 g</p>
+                                <p>Grasas saturadas: 7.80 g</p>
+                                <p>Carbohidratos: 1.70 g</p>
+                                <p>Peso por unidad: 30 g✅</p>
+                                <input type="number" class="weight-input" value="30" min="1" placeholder="Peso en gramos">
                             </div>
                         </div>
                     </div>
@@ -2471,38 +2507,38 @@
                             </div>
                         </div>
                         <!-- Leche semidesnatada -->
-                        <div class="food-item" data-calories="47" data-protein="3.3" data-fat="1.6" data-saturatedFat="1.1" data-carbs="4.9" data-default-weight="200">
-                            <span>Leche semidesnatada</span>
+                        <div class="food-item" data-calories="45" data-protein="3.15" data-fat="1.55" data-saturatedFat="1" data-carbs="4.65" data-default-weight="200">
+                            <span>Leche semidesnatada (Central Lechera Asturiana )</span>
                             <div class="food-quantity">
                                 <input type="number" class="quantity-input" value="1" min="1">
                                 <button class="details-btn" onclick="toggleDetails(this)">+</button>
                                 <button onclick="addPredefinedFood(this)">Agregar</button>
                             </div>
                             <div class="food-details">
-                                <p>Kilocalorías: 47 kcal</p>
-                                <p>Proteínas: 3.3 g</p>
-                                <p>Grasas: 1.6 g</p>
-                                <p>Grasas saturadas: 1.1 g</p>
-                                <p>Carbohidratos: 4.9 g</p>
-                                <p>Peso por unidad: 200 ml (1 vaso)</p>
+                                <p>Kilocalorías: 45 kcal</p>
+                                <p>Proteínas: 3.15 g</p>
+                                <p>Grasas: 1.55 g</p>
+                                <p>Grasas saturadas: 1 g</p>
+                                <p>Carbohidratos: 4.65 g</p>
+                                <p>Peso por unidad: 200✅ (1 vaso)</p>
                                 <input type="number" class="weight-input" value="200" min="1" placeholder="Peso en gramos">
                             </div>
                         </div>
                         <!-- Leche desnatada -->
-                        <div class="food-item" data-calories="35" data-protein="3.4" data-fat="0.2" data-saturatedFat="0.1" data-carbs="5" data-default-weight="200">
-                            <span>Leche desnatada</span>
+                        <div class="food-item" data-calories="43" data-protein="5" data-fat="0.5" data-saturatedFat="0.3" data-carbs="4.8" data-default-weight="200">
+                            <span>Leche desnatada Puleva proteina </span>
                             <div class="food-quantity">
                                 <input type="number" class="quantity-input" value="1" min="1">
                                 <button class="details-btn" onclick="toggleDetails(this)">+</button>
                                 <button onclick="addPredefinedFood(this)">Agregar</button>
                             </div>
                             <div class="food-details">
-                                <p>Kilocalorías: 35 kcal</p>
-                                <p>Proteínas: 3.4 g</p>
-                                <p>Grasas: 0.2 g</p>
-                                <p>Grasas saturadas: 0.1 g</p>
-                                <p>Carbohidratos: 5 g</p>
-                                <p>Peso por unidad: 200 ml (1 vaso)</p>
+                                <p>Kilocalorías: 43 kcal</p>
+                                <p>Proteínas: 5 g</p>
+                                <p>Grasas: 0.5 g</p>
+                                <p>Grasas saturadas: 0.3 g</p>
+                                <p>Carbohidratos: 4.8 g</p>
+                                <p>Peso por unidad: 200 ml✅ (1 vaso)</p>
                                 <input type="number" class="weight-input" value="200" min="1" placeholder="Peso en gramos">
                             </div>
                         </div>
@@ -2536,7 +2572,7 @@
                             </div>
                         </div>
                         <!-- Queso semicurado -->
-                        <div class="food-item" data-calories="384" data-protein="25" data-fat="32" data-saturatedFat="20" data-carbs="1" data-default-weight="30">
+                        <div class="food-item" data-calories="421" data-protein="25" data-fat="35" data-saturatedFat="25" data-carbs="1.6" data-default-weight="20">
                             <span>Queso semicurado</span>
                             <div class="food-quantity">
                                 <input type="number" class="quantity-input" value="1" min="1">
@@ -2544,13 +2580,13 @@
                                 <button onclick="addPredefinedFood(this)">Agregar</button>
                             </div>
                             <div class="food-details">
-                                <p>Kilocalorías: 384 kcal</p>
+                                <p>Kilocalorías: 421 kcal</p>
                                 <p>Proteínas: 25 g</p>
-                                <p>Grasas: 32 g</p>
-                                <p>Grasas saturadas: 20 g</p>
-                                <p>Carbohidratos: 1 g</p>
-                                <p>Peso por unidad: 30 g (1 porción)</p>
-                                <input type="number" class="weight-input" value="30" min="1" placeholder="Peso en gramos">
+                                <p>Grasas: 35 g</p>
+                                <p>Grasas saturadas: 25 g</p>
+                                <p>Carbohidratos: 1.6 g</p>
+                                <p>Peso por unidad: 20 g ✅(1 porción)</p>
+                                <input type="number" class="weight-input" value="20" min="1" placeholder="Peso en gramos">
                             </div>
                         </div>
                         <!-- Queso curado -->
@@ -2569,6 +2605,40 @@
                                 <p>Carbohidratos: 1 g</p>
                                 <p>Peso por unidad: 30 g (1 porción)</p>
                                 <input type="number" class="weight-input" value="30" min="1" placeholder="Peso en gramos">
+                                    <!-- Queso curado -->
+                        <div class="food-item" data-calories="325" data-protein="29.4" data-fat="23" data-saturatedFat="16" data-carbs="0" data-default-weight="4">
+                            <span>Queso cauda viejo</span>
+                            <div class="food-quantity">
+                                <input type="number" class="quantity-input" value="1" min="1">
+                                <button class="details-btn" onclick="toggleDetails(this)">+</button>
+                                <button onclick="addPredefinedFood(this)">Agregar</button>
+                            </div>
+                            <div class="food-details">
+                                <p>Kilocalorías: 325 kcal</p>
+                                <p>Proteínas: 29.4 g</p>
+                                <p>Grasas: 23 g</p>
+                                <p>Grasas saturadas: 16 g</p>
+                                <p>Carbohidratos: 0 g</p>
+                                <p>Peso por unidad: 4 g ✅(1 porción fina)</p>
+                                <input type="number" class="weight-input" value="4" min="1" placeholder="Peso en gramos">
+                            </div>
+                        </div>
+                         <!-- queso havarti -->
+                         <div class="food-item" data-calories="418" data-protein="18.90" data-fat="38" data-saturatedFat="24.2" data-carbs="0.1" data-default-weight="32">
+                            <span>queso havarti</span>
+                            <div class="food-quantity">
+                                <input type="number" class="quantity-input" value="1" min="1">
+                                <button class="details-btn" onclick="toggleDetails(this)">+</button>
+                                <button onclick="addPredefinedFood(this)">Agregar</button>
+                            </div>
+                            <div class="food-details">
+                                <p>Kilocalorías: 418 kcal</p>
+                                <p>Proteínas: 18.90 g</p>
+                                <p>Grasas: 38 g</p>
+                                <p>Grasas saturadas: 24.2 g</p>
+                                <p>Carbohidratos: 0.1 g</p>
+                                <p>Peso por unidad: 32 g✅</p>
+                                <input type="number" class="weight-input" value="32" min="1" placeholder="Peso en gramos">
                             </div>
                         </div>
                     </div>
