--- a/calorias.html
+++ b/calorias.html
@@ -1247,6 +1247,35 @@
 								<p>Peso por unidad: 150 g</p><input class="weight-input" min="1" placeholder="Peso en gramos" type="number" value="150">
 							</div>
 						</div>
+							<div class="food-item" data-calories="137" data-carbs="0.5" data-default-weight="70" data-fat="7" data-protein="18" data-saturatedfat="2.5">
+							<span>entrecot lomo iberico marinado </span>
+							<div class="food-quantity">
+								<input class="quantity-input" min="1" type="number" value="1"> <button class="details-btn" onclick="toggleDetails(this)">+</button> <button onclick="addPredefinedFood(this)">Agregar</button>
+							</div>
+							<div class="food-details">
+								<p>Kilocalorías: 137 kcal</p>
+								<p>Proteínas: 18 g</p>
+								<p>Grasas: 7 g</p>
+								<p>Grasas saturadas: 2.5 g</p>
+								<p>Carbohidratos: 0.5 g</p>
+								<p>Peso por unidad: 70 g✅</p><input class="weight-input" min="1" placeholder="Peso en gramos" type="number" value="70">
+							</div>
+						</div>
+								<div class="food-item" data-calories="167" data-carbs="18.5" data-default-weight="45" data-fat="5.3" data-protein="11.1" data-saturatedfat="1.9">
+							<span>flamenquines </span>
+							<div class="food-quantity">
+								<input class="quantity-input" min="1" type="number" value="1"> <button class="details-btn" onclick="toggleDetails(this)">+</button> <button onclick="addPredefinedFood(this)">Agregar</button>
+							</div>
+							<div class="food-details">
+								<p>Kilocalorías: 167 kcal</p>
+								<p>Proteínas: 11.1 g</p>
+								<p>Grasas: 5.3 g</p>
+								<p>Grasas saturadas: 1.9 g</p>
+								<p>Carbohidratos: 18.5 g</p>
+								<p>Peso por unidad: 45 g✅</p><input class="weight-input" min="1" placeholder="Peso en gramos" type="number" value="45">
+							</div>
+						</div>
+						
 						<div class="food-item" data-calories="291" data-carbs="0" data-default-weight="150" data-fat="21" data-protein="25" data-saturatedfat="8">
 							<span>Costillas de cerdo</span>
 							<div class="food-quantity">
